# klotski

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: board.c  board.h  bst.c  bst.h  config.c  config.h  main.c  puzzle.c  puzzle.h  queue.c  queue.h  tests.c  tests.h  types.h  utils.c  utils.h
